--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   <form action="/create" method="post" accept-charset="utf-8">
     <div class="item-new">
       <input class="input" type="text" name="content" />
+      <p> Pour régler les conflits github il faut une bonne poule que l'on merge afin de l'add au four. Une fois prête on appelle tout le monde en criant "come eat". Pour finir, on push la poule cuite dans nos assiettes </p>
     </div>
   </form>
 
