--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <h1 id="page-title"><%= title %></h1>
 
 <div id="list">
+<img src="../public/images/giphy.gif">
   <form action="/create" method="post" accept-charset="utf-8">
     <div class="item-new">
       <input class="input" type="text" name="content" />
