"ajout d'une image"

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,7 @@
       <div id="footer">
         <div class="footer-content"><a id="github-link" href="https://github.com/dreamerslab/express-todo-example" target="_blank">Code</a> by</div>
         <a href="http://dreamerslab.com/" id="dreamerslab" target="_blank">DreamersLab</a>
+        <img src="img/poulet.jpg">
         <div class="footer-content">&#169;</div>
       </div>
     </div>
