--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 
 <div id="list">
 <img src="/images/giphy.gif" style='width:50px'>
+<img src="/images/no-way.jpg" style='width:50px'>
   <form action="/create" method="post" accept-charset="utf-8">
     <div class="item-new">
       <input class="input" type="text" name="content" />
